@@ -3,12 +3,7 @@
 require File.dirname(__FILE__) + '/../../test_helper'
 
 class RemotePslCardTest < Test::Unit::TestCase
-  # The test results are determined by the amount of the transaction
-  ACCEPT_AMOUNT = 1000
-  REFERRED_AMOUNT = 6000
-  DECLINED_AMOUNT = 11000
-  KEEP_CARD_AMOUNT = 15000
-
+  
   def setup
     @gateway = PslCardGateway.new(fixtures(:psl_card))
     
@@ -20,10 +15,16 @@ class RemotePslCardTest < Test::Unit::TestCase
     
     @visa = CreditCard.new(fixtures(:psl_visa))
     @visa_address = fixtures(:psl_visa_address)
+    
+    # The test results are determined by the amount of the transaction
+    @accept_amount = 1000
+    @referred_amount = 6000
+    @declined_amount = 11000
+    @keep_card_amount = 15000
   end
   
   def test_successful_visa_purchase
-    response = @gateway.purchase(ACCEPT_AMOUNT, @visa,
+    response = @gateway.purchase(@accept_amount, @visa,
       :billing_address => @visa_address
     )
     assert_success response
@@ -31,7 +32,7 @@ class RemotePslCardTest < Test::Unit::TestCase
   end
   
   def test_successful_visa_purchase_specifying_currency
-    response = @gateway.purchase(ACCEPT_AMOUNT, @visa,
+    response = @gateway.purchase(@accept_amount, @visa,
       :billing_address => @visa_address,
       :currency => 'GBP'
     )
@@ -40,7 +41,7 @@ class RemotePslCardTest < Test::Unit::TestCase
   end
   
   def test_successful_solo_purchase
-    response = @gateway.purchase(ACCEPT_AMOUNT, @solo, 
+    response = @gateway.purchase(@accept_amount, @solo, 
       :billing_address => @solo_address
     )
     assert_success response
@@ -48,7 +49,7 @@ class RemotePslCardTest < Test::Unit::TestCase
   end
   
   def test_referred_purchase
-    response = @gateway.purchase(REFERRED_AMOUNT, @uk_maestro, 
+    response = @gateway.purchase(@referred_amount, @uk_maestro, 
       :billing_address => @uk_maestro_address
     )
     assert_failure response
@@ -56,7 +57,7 @@ class RemotePslCardTest < Test::Unit::TestCase
   end
   
   def test_declined_purchase
-    response = @gateway.purchase(DECLINED_AMOUNT, @uk_maestro, 
+    response = @gateway.purchase(@declined_amount, @uk_maestro, 
       :billing_address => @uk_maestro_address
     )
     assert_failure response
@@ -64,7 +65,7 @@ class RemotePslCardTest < Test::Unit::TestCase
   end
   
   def test_declined_keep_card_purchase
-    response = @gateway.purchase(KEEP_CARD_AMOUNT, @uk_maestro, 
+    response = @gateway.purchase(@keep_card_amount, @uk_maestro, 
       :billing_address => @uk_maestro_address
     )
     assert_failure response
@@ -72,7 +73,7 @@ class RemotePslCardTest < Test::Unit::TestCase
   end
   
   def test_successful_authorization
-    response = @gateway.authorize(ACCEPT_AMOUNT, @uk_maestro, 
+    response = @gateway.authorize(@accept_amount, @uk_maestro, 
       :billing_address => @uk_maestro_address
     )
     assert_success response
@@ -83,7 +84,7 @@ class RemotePslCardTest < Test::Unit::TestCase
     @gateway = PslCardGateway.new(
       :login => ''
     )
-    response = @gateway.authorize(ACCEPT_AMOUNT, @uk_maestro, 
+    response = @gateway.authorize(@accept_amount, @uk_maestro, 
       :billing_address => @uk_maestro_address
     )
     assert_failure response
@@ -91,13 +92,13 @@ class RemotePslCardTest < Test::Unit::TestCase
   end
   
   def test_successful_authorization_and_capture
-    authorization = @gateway.authorize(ACCEPT_AMOUNT, @uk_maestro,
+    authorization = @gateway.authorize(@accept_amount, @uk_maestro,
       :billing_address => @uk_maestro_address
     )
     assert_success authorization
     assert authorization.test?
     
-    capture = @gateway.capture(ACCEPT_AMOUNT, authorization.authorization)
+    capture = @gateway.capture(@accept_amount, authorization.authorization)
     
     assert_success capture
     assert capture.test?
