@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Update PSL Card Gateway to add support for avs and cvv data. remove test_result_from_cc_number. [cody]
 * Update PlugNPayGateway to support avs and cvv data. Remove test_result_from_cc_number. [cody]
 * Update PaymentExpressGateway to remove test_result_from_cc_number. [cody]
 * Update PaySecure to remove test_result_from_cc_number. [cody]
